--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>Github</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <div class="navigation"
         Yay!
     </body>
 </html>
