--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Github</title>
+        <script type="text/javascript" src="//fast.fonts.net/jsapi/e16c3c79-fe31-4440-bc00-f55ba5c45598.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
