--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <div class="container">
         <div class="navigation">asdsadad</div>
         Yay!
+        </div>
     </body>
 </html>
