--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     </head>
     <body>
         <div class="container">
-        <div class="navigation">asdsadad</div>
+        <div class="navigation">
+            <ul class="menu left-menu">
+                <li class="menu applications-menu level0">APPLICATIONS</li>
+                <li class="menu products-menu level0">PRODUCTS</li>
+            </ul>
+        </div>
+        <div class="logo">
+            <a href="/" title="Typhoon Hil">
+            <img class="logo-img" src="logo.svg" alt="Typhoon Hil">
+            <span>Typhoon Hil</span>
+            </a>
+        </div>
+        <div class="navigation">
+            <ul class="menu right-menu">
+                <li class="menu company-menu level0">COMPANY</li>
+                <li class="menu mytyphoon-menu level0">My TYPHOON</li>
+            </ul>
+        </div>
         Yay!
         </div>
     </body>
