--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
     </head>
     <body>
         <div class="container">
-        <div class="navigation">
+        <div class="navigation clearfix">
             <ul class="menu left-menu">
                 <li class="menu applications-menu level0">APPLICATIONS</li>
                 <li class="menu products-menu level0">PRODUCTS</li>
             </ul>
-        </div>
-        <div class="logo">
+        <div class="logo clearfix">
             <a href="/" title="Typhoon Hil">
             <img class="logo-img" src="logo.svg" alt="Typhoon Hil">
             <span>Typhoon Hil</span>
             </a>
         </div>
-        <div class="navigation">
             <ul class="menu right-menu">
                 <li class="menu company-menu level0">COMPANY</li>
                 <li class="menu mytyphoon-menu level0">My TYPHOON</li>
