--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <li class="menu mytyphoon-menu level0">My TYPHOON</li>
             </ul>
         </div>
+        <div class="content clearfix">
         Yay!
+        </div>
         </div>
     </body>
 </html>
