--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             </ul>
         <div class="logo clearfix">
             <a href="/" title="Typhoon Hil">
-            <img class="logo-img" src="logo.svg" alt="Typhoon Hil">
-            <span>Typhoon Hil</span>
+            <img class="logo-img" src="logo.svg" alt="Typhoon HIL">
+            <span>Typhoon HIL</span>
             </a>
         </div>
             <ul class="menu right-menu">
