--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </div>
         <div class="content clearfix">
-        Yay!
+        Yay!O
         </div>
         </div>
     </body>
