--- a/scroll.html
+++ b/scroll.html
@@ -21,10 +21,29 @@
         var schight = $('.front-cta').height() + 5;
         $('.count-windows').html($('.front-cta').length);
         $('#Mod289').click(function(){
-          $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
-          $('#Mod269').css({visibility:"visible"});
-          $('.scroll-position').html($('.custom.front-cta-window-container-webinars').css('top'));
+          var scud = $('.custom.front-cta-window-container-webinars').css('top');
+          switch (scud) {
+            case '0px': $('#Mod269').css({visibility:"visible"});
+            case '0px': $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
+              break;
+            case '-255px': $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
+              break;
+            case '-510px': $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
+            case '-510px': $('#Mod289').css({visibility:"hidden"});
+            case '-510px': $('#Mod293').css({visibility:"visible"});
+          }
         });
+          $('#Mod269').click(function(){
+            var scup = $('.custom.front-cta-window-container-webinars').css('top');
+            switch (scup) {
+              case '-510px': $('#Mod293').css({visibility:"hidden"});
+              case '-510px': $('#Mod289').css({visibility:"visible"});
+              case '-510px': $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
+                break;
+              case '-255px': $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
+              case '-255px': $('#Mod269').css({visibility:"hidden"});
+            }
+          });
       })
     </script>
   </head>
