--- a/scroll.html
+++ b/scroll.html
@@ -41,7 +41,9 @@
               case '-765px': $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
                 break;
               case '-510px': $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
-              case '-510px': $('#Mod269').css({visibility:"hidden"});
+                  break;
+              case '-255px': $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
+              case '-255px': $('#Mod269').css({visibility:"hidden"});
             }
           });
       })
