--- a/scroll.html
+++ b/scroll.html
@@ -23,27 +23,33 @@
         $('#Mod289').click(function(){
           var scud = $('.custom.front-cta-window-container-webinars').css('top');
           switch (scud) {
-            case '0px': $('#Mod269').css({visibility:"visible"});
-            case '0px': $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
+            case '0px':
+              $('#Mod269').css({visibility:"visible"});
+              $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
               break;
-            case '-255px': $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
+            case '-255px':
+              $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
               break;
-            case '-510px': $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
-            case '-510px': $('#Mod289').css({visibility:"hidden"});
-            case '-510px': $('#Mod293').css({visibility:"visible"});
+            case '-510px':
+              $('.custom.front-cta-window-container-webinars').animate({top: '-=' + schight + 'px'});
+              $('#Mod289').css({visibility:"hidden"});
+              $('#Mod293').css({visibility:"visible"});
           }
         });
           $('#Mod269').click(function(){
             var scup = $('.custom.front-cta-window-container-webinars').css('top');
             switch (scup) {
-              case '-765px': $('#Mod293').css({visibility:"hidden"});
-              case '-765px': $('#Mod289').css({visibility:"visible"});
-              case '-765px': $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
+              case '-765px':
+                $('#Mod293').css({visibility:"hidden"});
+                $('#Mod289').css({visibility:"visible"});
+                $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
                 break;
-              case '-510px': $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
-                  break;
-              case '-255px': $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
-              case '-255px': $('#Mod269').css({visibility:"hidden"});
+              case '-510px':
+                $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
+                break;
+              case '-255px':
+                $('.custom.front-cta-window-container-webinars').animate({top: '+=' + schight + 'px'});
+                $('#Mod269').css({visibility:"hidden"});
             }
           });
       })
